[gd_scene load_steps=18 format=3 uid="uid://w6qkohd2ejme"]

[ext_resource type="Script" path="res://scripts/follow_node.gd" id="2_fbk7p"]
[ext_resource type="PhysicsMaterial" uid="uid://b7f3tpjorcnfy" path="res://physics/phys_mat_golfball.tres" id="3_bvs30"]
[ext_resource type="AudioStream" uid="uid://dve11tyh5fanq" path="res://assets/audio/golfball_hit.mp3" id="4_vvdv4"]
[ext_resource type="Script" path="res://scripts/golfball_controller.gd" id="4_x2185"]
[ext_resource type="Script" path="res://scripts/camera_controller.gd" id="5_rnkab"]
[ext_resource type="Script" path="res://scripts/strength_arrow.gd" id="6_yi7yd"]

[sub_resource type="BoxMesh" id="BoxMesh_j5idn"]
size = Vector3(0.01, 0.02, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_klkvt"]
radius = 0.044

[sub_resource type="SphereMesh" id="SphereMesh_f4cbf"]
radius = 0.044
height = 0.088

[sub_resource type="Gradient" id="Gradient_6pgnt"]
offsets = PackedFloat32Array(0, 0.357542)
colors = PackedColorArray(0.2, 0.2, 0.2, 1, 0.42, 0.42, 0.42, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_jspiy"]
gradient = SubResource("Gradient_6pgnt")

[sub_resource type="Gradient" id="Gradient_dmuqc"]
offsets = PackedFloat32Array(0.139665, 0.290503)
colors = PackedColorArray(0.18, 0.18, 0.18, 1, 0.486034, 0.486034, 0.486034, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8ew6x"]
gradient = SubResource("Gradient_dmuqc")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0ocpq"]
lifetime_randomness = 0.75
direction = Vector3(0, 0.1, 1)
spread = 10.0
initial_velocity_max = 1.0
gravity = Vector3(0, 0, 0)
scale_max = 2.0
color_ramp = SubResource("GradientTexture1D_8ew6x")
color_initial_ramp = SubResource("GradientTexture1D_jspiy")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mq8he"]
albedo_color = Color(0.552941, 0.552941, 0.552941, 1)

[sub_resource type="SphereMesh" id="SphereMesh_plf04"]
material = SubResource("StandardMaterial3D_mq8he")
radius = 0.02
height = 0.04
radial_segments = 32
rings = 16

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_5gi3a"]
properties/0/path = NodePath("Golfball:position")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath("Golfball:linear_velocity")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath("Golfball:angular_velocity")
properties/2/spawn = true
properties/2/replication_mode = 2

[node name="Golfball" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.847, 0)
script = ExtResource("4_x2185")

[node name="MoveAllowedTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="FollowPosition" type="Node3D" parent="." node_paths=PackedStringArray("following_node")]
script = ExtResource("2_fbk7p")
LERP_WEIGHT = 100
following_node = NodePath("../Golfball")

[node name="StrengthArrow" type="Node3D" parent="FollowPosition"]
visible = false
script = ExtResource("6_yi7yd")

[node name="ArrowMesh" type="MeshInstance3D" parent="FollowPosition/StrengthArrow"]
mesh = SubResource("BoxMesh_j5idn")

[node name="Golfball" type="RigidBody3D" parent="."]
mass = 0.05
physics_material_override = ExtResource("3_bvs30")
can_sleep = false
linear_damp = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Golfball"]
shape = SubResource("SphereShape3D_klkvt")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Golfball"]
mesh = SubResource("SphereMesh_f4cbf")

[node name="CameraPosition" type="Node3D" parent="." node_paths=PackedStringArray("following_node")]
script = ExtResource("2_fbk7p")
LERP_WEIGHT = 4
following_node = NodePath("../Golfball")

[node name="PuttingGPUParticle" type="GPUParticles3D" parent="CameraPosition"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.19209e-07, -1.49012e-08)
emitting = false
amount = 64
lifetime = 0.4
one_shot = true
explosiveness = 0.8
randomness = 0.4
visibility_aabb = AABB(-1.64485, -1.79943, -1.84936, 3.2897, 3.59887, 3.69872)
process_material = SubResource("ParticleProcessMaterial_0ocpq")
draw_pass_1 = SubResource("SphereMesh_plf04")

[node name="PuttingAudioPlayer" type="AudioStreamPlayer3D" parent="CameraPosition"]
stream = ExtResource("4_vvdv4")

[node name="SpringArm3D" type="SpringArm3D" parent="CameraPosition"]
transform = Transform3D(1, 0, 0, 0, 0.927184, 0.374607, 0, -0.374607, 0.927184, 0, 0.380318, 0)
spring_length = 1.5
margin = 0.1
script = ExtResource("5_rnkab")

[node name="Camera3D" type="Camera3D" parent="CameraPosition/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.38419e-07, 1.5)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_5gi3a")

[connection signal="timeout" from="MoveAllowedTimer" to="." method="_on_move_allowed_timer_timeout"]
